--- a/HospSimWebsite/Views/Home/Index.cshtml
+++ b/HospSimWebsite/Views/Home/Index.cshtml
@@ -20,11 +20,20 @@
             <label for="inputName">Name</label>
             <input type="text" class="form-control" placeholder="Jack Something">
         </div>
-        <div class="form-group">
-            <label for="inputBirthday">Date of birth</label>
-            <input type="date" class="form-control" >
+        <label for="inputAdress">Adress</label>
+
+        <div class="form-group" id="adressform">
+            <div id="adressdiv">
+                <input type="text" class="form-control">
+            </div>
+            <div id="housenumdiv">
+                <input type="number" class="form-control">
+            </div>
         </div>
-        <button type="submit" class="btn btn-primary">Login</button>
+        
+        <div class="form-group">
+            <button type="submit" class="btn btn-primary">Login</button>
+        </div>
     </form>
 </div>
 </body>
