--- a/HospSimWebsite/Views/Form/Submit.cshtml
+++ b/HospSimWebsite/Views/Form/Submit.cshtml
@@ -1,10 +1,7 @@
-@page
-
 @{
-    Layout = null;
+    ViewBag.Title = "title";
+    Layout = "_Layout";
 }
-@model HospSimWebsite.Views.Form.Index
-
 
 <!DOCTYPE html>
 
@@ -14,7 +11,7 @@
 </head>
 <body>
 <div>
-    
+    <h2>Welcome, @Model.Name</h2>
 </div>
 </body>
 </html>
