--- a/HospSimWebsite/Views/Home/Index.cshtml
+++ b/HospSimWebsite/Views/Home/Index.cshtml
@@ -20,22 +20,22 @@
     <form asp-controller="Form" asp-action="Submit" method="post">
         <div class="form-group">
             <label>Name</label>
-            <input asp-for="InputName" type="text" class="form-control" placeholder="Jack Something">
+            <input asp-for="Name" type="text" class="form-control" placeholder="Jack Something">
         </div>
         <label>Adress</label>
 
         <div class="form-group" id="adressform">
             <div id="adressdiv">
-                <input asp-for="InputAdressText" type="text" class="form-control">
+                <input asp-for="AdressText" type="text" class="form-control">
             </div>
             <div id="housenumdiv">
-                <input asp-for="InputAdressNum" type="number" class="form-control">
+                <input asp-for="AdressNum" type="number" class="form-control">
             </div>
         </div>
         
         <div class="form-group">
-            <label asp-for="InputDisease">Diagnosis (Doctor approval only)</label>
-            <select asp-for="InputDisease" class="form-control" id="inputDisease">
+            <label>Diagnosis (Doctor approval only)</label>
+            <select asp-for="Disease" class="form-control" id="inputDisease">
                 <option>Owo</option>
                 <option>Bwb</option>
                 <option>Cwc</option>
