Added proper text input verification.

--- a/HospSimWebsite/Views/Form/Submit.cshtml
+++ b/HospSimWebsite/Views/Form/Submit.cshtml
@@ -1,5 +1,5 @@
 @{
-    ViewBag.Title = "title";
+    ViewBag.Title = "Account";
     Layout = "_Layout";
 }
 
@@ -7,11 +7,14 @@
 
 <html>
 <head>
+    <meta charset="UTF-8">
     <title>Fairbanks | Form Submitted</title>
+    <link rel="stylesheet" href="~/css/site.css" />
 </head>
 <body>
 <div>
-    <h2>Welcome, @Model.Name</h2>
+    <h2>Welcome, @Model.Name.</h2>
+    <h5 class="submitmaintext" >Welcome to my domain.</h5>
 </div>
 </body>
 </html>
