--- a/HospSimWebsite/Views/Home/Index.cshtml
+++ b/HospSimWebsite/Views/Home/Index.cshtml
@@ -9,6 +9,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/style.css">
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <title>Fairbanks | Patient Registration</title>
 </head>
 <body>
@@ -20,7 +21,7 @@
     <form asp-controller="Form" asp-action="Submit" method="post">
         <div class="form-group">
             <label>Name</label>
-            <input asp-for="Name" type="text" class="form-control" placeholder="Jack Something">
+            <input id="inputName" asp-for="Name" type="text" class="form-control" placeholder="Jack Something">
         </div>
         <label>Adress</label>
 
@@ -43,8 +44,8 @@
             </select>
         </div>
         
-        <div class="form-group">
-            <button type="submit" class="btn btn-primary">Submit</button>
+        <div>
+            <button type="button" onclick="checkFormInput()" class="btn btn-primary">Submit</button>
         </div>
     </form>
 </div>
