--- a/HospSimWebsite/Views/Home/Index.cshtml
+++ b/HospSimWebsite/Views/Home/Index.cshtml
@@ -21,7 +21,7 @@
     <form asp-controller="Form" asp-action="Submit" method="post">
         <div class="form-group">
             <label>Name</label>
-            <input id="inputName" asp-for="Name" type="text" class="form-control" placeholder="Jack Something">
+            <input id="inputName" asp-for="Name" type="text" class="form-control" maxlength="28" placeholder="Jack Something">
         </div>
         <label>Adress</label>
 
