--- a/HospSimWebsite/Views/Home/Index.cshtml
+++ b/HospSimWebsite/Views/Home/Index.cshtml
@@ -39,7 +39,7 @@
             <select asp-for="Disease" class="form-control" id="inputDisease">
                 @foreach (var disease in Model.Diseases)
                 {
-                    <option>@disease.ToString()</option>
+                    <option value="@disease.Id">@disease.ToString()</option>
                 }
             </select>
         </div>
