--- a/HospSimWebsite/Views/Shared/Error.cshtml
+++ b/HospSimWebsite/Views/Shared/Error.cshtml
@@ -1,10 +1,11 @@
-﻿@model ErrorViewModel
+﻿@using System.Data
+@model ErrorViewModel
 @{
     ViewData["Title"] = "Error";
 }
 
 <h1 class="text-danger">Error.</h1>
-<h2 class="text-danger">An error occurred while processing your request.</h2>
+<h2>Oopsie woopsie, we did a fucky wucky. Our code monkwies are wurking vewwy hard to wesolve the issuow. owo</h2>
 
 @if (Model.ShowRequestId)
 {
@@ -13,13 +14,7 @@
     </p>
 }
 
-<h3>Development Mode</h3>
+
 <p>
-    Swapping to <strong>Development</strong> environment will display more detailed information about the error that occurred.
-</p>
-<p>
-    <strong>The Development environment shouldn't be enabled for deployed applications.</strong>
-    It can result in displaying sensitive information from exceptions to end users.
-    For local debugging, enable the <strong>Development</strong> environment by setting the <strong>ASPNETCORE_ENVIRONMENT</strong> environment variable to <strong>Development</strong>
-    and restarting the app.
+    <strong>@Model.ErrorInformation</strong>
 </p>
