--- a/HospSimWebsite/Views/Home/Index.cshtml
+++ b/HospSimWebsite/Views/Home/Index.cshtml
@@ -17,13 +17,15 @@
     <h2 class="title"><span id="hospitalname">Fairbanks</span> | Patient Registration </h2>
 </div>
 
+
+
 <div class="formmain">
     <form asp-controller="Form" asp-action="Submit" method="post">
         <div class="form-group">
             <label>Name</label>
             <input id="inputName" asp-for="Name" type="text" class="form-control" maxlength="28" placeholder="Jack Something">
         </div>
-        <label>Adress</label>
+        <label>Address</label>
 
         <div class="form-group" id="adressform">
             <div id="adressdiv">
