--- a/HospSimWebsite/wwwroot/css/site.css
+++ b/HospSimWebsite/wwwroot/css/site.css
@@ -60,7 +60,7 @@ body {
 }
 
 #hospitalname {
-  color: rebeccapurple;
+  color: purple;
 }
 
 .title {
@@ -82,6 +82,21 @@ body {
 
 .welcomeMsgFadeIn {
   size: 50px;
+}
+
+.navbar-theme {
+  background-color: lightgrey;
+}
+
+.undernavbarline {
+  background-color: purple;
+  width: 100%;
+  height: 5px;
+}
+
+.undernavbar {
+  width: 100%;
+  height: 20px;
 }
 
 #adressdiv {
