--- a/HospSimWebsite/Views/Shared/_Layout.cshtml
+++ b/HospSimWebsite/Views/Shared/_Layout.cshtml
@@ -79,6 +79,7 @@
         </script>
     </environment>
     <script src="~/js/site.js" asp-append-version="true"></script>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 
     @RenderSection("Scripts", required: false)
 </body>
