Disease page front-end update.

--- a/HospSimWebsite/Views/Disease/Index.cshtml
+++ b/HospSimWebsite/Views/Disease/Index.cshtml
@@ -7,14 +7,15 @@
 <head>
     <link rel="stylesheet" href="css/site.css"/>
 </head>
-<h2>@Model.Name</h2>
+<div class="card float-left diseaseCard">
+    <div id="diseaseCardText">
+        <h2 class="card-title">@Model.Name</h2>
 
-@foreach (var desc in Model.Descriptions)
-{
-    <h3>@desc</h3>
-}
+        <h3 class="card-text small">@Model.Description</h3>
+    </div>
+</div>
 
-<div class="diseasePatientList">
+<div class="card float-right patientCard">
     <table class="table diseasetable">
         <thead class="thead-dark">
         <tr>
@@ -23,14 +24,15 @@
         </tr>
         </thead>
         <body>
-        
+    
         @foreach (Patient patient in Model.Patients)
         {
             <tr>
                 <th scope="row">@patient.Id</th>
-                <td class="patientName" >@patient.Name</td>
+                <td>@patient.Name</td>
             </tr>
         }
         </body>
     </table>
 </div>
+
