Cleaned up architecture a bit.

--- a/HospSimWebsite/Views/Shared/_Layout.cshtml
+++ b/HospSimWebsite/Views/Shared/_Layout.cshtml
@@ -48,7 +48,7 @@
         <div class="undernavbar"></div>
     </div>
 </header>
-    <div class="container">
+    <div>
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
