--- a/HospSimWebsite/Views/Home/Index.cshtml
+++ b/HospSimWebsite/Views/Home/Index.cshtml
@@ -2,7 +2,7 @@
     ViewData["Title"] = "Home Page";
     
 }
-@model HomeViewModel
+@model HospSimWebsite.Models.HomeViewModel
 
 <html lang="en">
 <head>
@@ -11,28 +11,31 @@
     <link rel="stylesheet" href="css/site.css">
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 </head>
+
 <body>
-<div align="center">
-    <div class="row" style="display: inline-block;">
-        <div class="card patientCard">
-            <div class="card-body">
-                <h5 class="card-title">Patients</h5>
-                <p class="card-text">Our current amount of patients.</p>
-                <p class="card-text"><b>@Model.PatientCount</b></p>
-                <a style="float: bottom" href="#" class="btn btn-primary">Learn more</a>
+    <div class="headerDiv">
+        <div align="center">
+            <div class="row" style="display: inline-block;">
+                <div class="card patientCard">
+                    <div class="card-body">
+                        <h5 class="card-title">Patients</h5>
+                        <p class="card-text">Our current amount of patients.</p>
+                        <p class="card-text"><b>@Model.PatientCount</b></p>
+                        <a style="float: bottom" href="#" class="btn btn-primary">Learn more</a>
+                    </div>
+                </div>
+                <div class="card diseaseCard">
+                    <div class="card-body">
+                        <h5 class="card-title">Diseases</h5>
+                        <p class="card-text">The current amount of diseases.</p>
+                        <p class="card-text"><b>@Model.DiseaseCount</b></p>
+                        <a style="float: bottom" href="#" class="btn btn-primary">Learn more</a>
+                    </div>
+                </div>
             </div>
-        </div>
-        <div class="card diseaseCard">
-            <div class="card-body">
-                <h5 class="card-title">Diseases</h5>
-                <p class="card-text">The current amount of diseases.</p>
-                <p class="card-text"><b>@Model.DiseaseCount</b></p>
-                <a style="float: bottom" href="#" class="btn btn-primary">Learn more</a>
-            </div>
+            <h3 style="margin-top: 20px">Welcome to Fairbanks | Hospital.</h3>
+            <a asp-controller="Form" asp-action="Index">Register patient.</a>
         </div>
     </div>
-    <h3 style="margin-top: 20px">Welcome to Fairbanks | Hospital.</h3>
-    <a asp-controller="Form" asp-action="Index">Register patient.</a>
-</div>
 </body>
 </html>
