--- a/HospSimWebsite/wwwroot/css/site.css
+++ b/HospSimWebsite/wwwroot/css/site.css
@@ -85,6 +85,7 @@ body {
 }
 
 .navbar-theme {
+  opacity: 30%;
   background-color: lightgrey;
 }
 
@@ -108,6 +109,7 @@ body {
 }
 
 .undernavbarline {
+  opacity: 30%;
   background-color: purple;
   width: 100%;
   height: 5px;
@@ -158,4 +160,8 @@ body {
 .infoCards {
   height: 200px;
   width: 70%;
+}
+
+.headerDiv {
+  background-image: url("download.jpg");
 }
