Dependency Injection for Repositories.

--- a/HospSimWebsite/Views/Patients/Index.cshtml
+++ b/HospSimWebsite/Views/Patients/Index.cshtml
@@ -2,7 +2,7 @@
     ViewData["Title"] = "Details";
 }
 @using HospSimWebsite.Model
-@model HospSimWebsite.Models.PatientsModel
+@model HospSimWebsite.Models.PatientsViewModel
 
 
 <html lang="en">
