View updated front page.

--- a/HospSimWebsite/Views/Home/Index.cshtml
+++ b/HospSimWebsite/Views/Home/Index.cshtml
@@ -33,7 +33,7 @@
                     </div>
                 </div>
             </div>
-            <h3 style="margin-top: 20px">Welcome to Fairbanks | Hospital.</h3>
+            <h3 style="margin-top: 20px; color: ghostwhite">Welcome to Fairbanks | Hospital.</h3>
             <a asp-controller="Form" asp-action="Index">Register patient.</a>
         </div>
     </div>
