--- a/HospSimWebsite/Views/Patients/Index.cshtml
+++ b/HospSimWebsite/Views/Patients/Index.cshtml
@@ -2,6 +2,7 @@
     ViewData["Title"] = "Details";
 }
 @using HospSimWebsite.Model
+@using HospSimWebsite.Views.Home
 @model HospSimWebsite.Models.PatientsViewModel
 
 
@@ -10,34 +11,47 @@
         <title>Patient lookup</title>
     </head>
     <body>
-    <div>
+    <div style="width: 70%; margin: auto;">
         <table class="table">
-        <thead class="thead-dark">
-        <tr>
-            <th scope="col">#</th>
-            <th scope="col">Name</th>
-            <th scope="col">Age</th>
-            <th scope="col">Disease</th>
-            <th scope="col"></th>
-        </tr>
-        </thead>
-        <body>
-        <div class="patientSearchBar">
-            <input class="form-control" id="patientSearchInput" type="text" placeholder="Search.."/>
-            <button class="btn btn-dark" onclick="searchPatient()" type="button">Search</button>
-        </div>
-        
-        @foreach (Patient patient in Model.Patients)
-        {
-            <tr>
-                <th scope="row">@patient.Id</th>
-                <td class="patientName" >@patient.Name</td>
-                <td>@patient.Age</td>
-                <td><a href="/disease/index?id=@patient.Disease.Id">@patient.Disease.ToString()</a></td>
-                <td><a onclick="deletePatient('@patient.Name', '@patient.Id');"><button class="btn btn-sm">Delete</button></a></td>
-            </tr>
-        }
-        </body>
+            <div class="patientSearchBar">
+                <input class="form-control" id="patientSearchInput" type="text" placeholder="Search.."/>
+                <button class="btn btn-dark" onclick="searchPatient()" type="button">Search</button>
+            </div>
+            @{
+                if (Model.Patients.Count > 0)
+                {
+                    <thead class="thead-dark">
+                    <tr>
+                        <th scope="col">#</th>
+                        <th scope="col">Name</th>
+                        <th scope="col">Age</th>
+                        <th scope="col">Disease</th>
+                        <th scope="col"></th>
+                    </tr>
+                    </thead>
+                }
+                else
+                {
+                    <div>
+                        <h3>Sorry, no patients go by that name.</h3>
+                    </div>
+                }
+            }
+
+
+            <body>
+
+            @foreach (Patient patient in Model.Patients)
+            {
+                <tr>
+                    <th scope="row">@patient.Id</th>
+                    <td class="patientName">@patient.Name</td>
+                    <td>@patient.Age</td>
+                    <td><a href="/disease/index?id=@patient.Disease.Id">@patient.Disease.ToString()</a></td>
+                    <td><a onclick="deletePatient('@patient.Name', '@patient.Id');"><button class="btn btn-sm">Delete</button></a></td>
+                </tr>
+            }
+            </body>
         </table>
 
     </div>
