--- a/HospSimWebsite/Views/Form/Index.cshtml
+++ b/HospSimWebsite/Views/Form/Index.cshtml
@@ -19,19 +19,18 @@
 </div>
 
 
-
 <div class="formmain">
     <form asp-controller="Form" asp-action="Submit" method="post">
         <div class="form-group">
             <label>Name</label>
             <input id="inputName" asp-for="Name" type="text" class="form-control" maxlength="28" placeholder="Jack Something">
         </div>
-        
+
         <label>Date of Birth</label>
         <div class="form-group">
-            <input asp-for="Birthday" type='date' class="form-control" />
+            <input asp-for="Birthday" type="date" class="form-control"/>
         </div>
-        
+
         <div class="form-group">
             <label>Diagnosis (Doctor approval only)</label>
             <select asp-for="Disease" class="form-control" id="inputDisease">
@@ -41,7 +40,7 @@
                 }
             </select>
         </div>
-        
+
         <div>
             <button type="button" onclick="checkFormInput()" class="btn btn-primary">Submit</button>
         </div>
