Renamed appsettings just to make a point.

--- a/HospSimWebsite/Views/Home/Index.cshtml
+++ b/HospSimWebsite/Views/Home/Index.cshtml
@@ -22,7 +22,7 @@
                     <p class="card-text">
                         <b>@Model.PatientCount</b>
                     </p>
-                    <a style="float: bottom" href="#" class="btn btn-primary">Learn more</a>
+                    <a style="float: bottom" href="patients" class="btn btn-primary">Learn more</a>
                 </div>
             </div>
             <div class="card diseaseCard">
@@ -32,7 +32,7 @@
                     <p class="card-text">
                         <b>@Model.DiseaseCount</b>
                     </p>
-                    <a style="float: bottom" href="#" class="btn btn-primary">Learn more</a>
+                    <a style="float: bottom" href="diseases" class="btn btn-primary">Learn more</a>
                 </div>
             </div>
         </div>
