--- a/HospSimWebsite/Views/Patients/Index.cshtml
+++ b/HospSimWebsite/Views/Patients/Index.cshtml
@@ -7,6 +7,7 @@
 <html lang="en">
 <head>
     <title>Patient lookup</title>
+    <script src="~/js/patient.js" asp-append-version="true"></script>
 </head>
 <body>
 <div style="margin: auto; width: 70%;">
@@ -24,7 +25,6 @@
                     <th scope="col">Name</th>
                     <th scope="col">Age</th>
                     <th scope="col">Disease</th>
-                    <th scope="col"></th>
                     <th scope="col"></th>
                 </tr>
                 </thead>
@@ -53,22 +53,6 @@
                     <a onclick="deletePatient('@patient.Name', '@patient.Id');">
                         <button class="btn btn-sm">Delete</button>
                     </a>
-                </td>
-                <td>
-                    @{
-                        if (patient.IsApproved)
-                        {
-                            <a>
-                                <button class="btn btn-sm" disabled="">Approve</button>
-                            </a>
-                        }
-                        else
-                        {
-                            <a asp-controller="Patients" asp-action="ApprovePatient" asp-route-index="@patient.Id">
-                                <button class="btn btn-sm">Approve</button>
-                            </a>
-                        }
-                    }
                 </td>
             </tr>
         }
