NPM Removed, Worked out queue more.

--- a/HospSimWebsite/Views/Form/Index.cshtml
+++ b/HospSimWebsite/Views/Form/Index.cshtml
@@ -1,5 +1,4 @@
-@using System
-@model HospSimWebsite.Models.PatientSubmitViewModel
+@model HospSimWebsite.Models.PatientsFormViewModel
 
 @{
     ViewBag.Title = "Registration";
