Removed unneccesary model ToString, better Database using IDIsposable db.

--- a/HospSimWebsite/Views/Patients/Index.cshtml
+++ b/HospSimWebsite/Views/Patients/Index.cshtml
@@ -49,7 +49,7 @@
                 <td class="patientName">@patient.Name</td>
                 <td>@patient.Age</td>
                 <td>
-                    <a asp-controller="Disease" asp-action="Index" asp-route-id="@patient.Disease.Id">@patient.Disease.ToString()</a>
+                    <a asp-controller="Disease" asp-action="Index" asp-route-id="@patient.Disease.Id">@patient.Disease.Name</a>
                 </td>
                 <td>
                     <a onclick="deletePatient('@patient.Name', '@patient.Id');">
