--- a/HospSimWebsite/Views/Shared/_Layout.cshtml
+++ b/HospSimWebsite/Views/Shared/_Layout.cshtml
@@ -66,6 +66,7 @@
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 </environment>
 <environment exclude="Development">
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"
             asp-fallback-src="~/lib/jquery/dist/jquery.min.js"
             asp-fallback-test="window.jQuery"
