Nice validation update on forms, Models in views replaced with ViewModels

--- a/HospSimWebsite/Views/Patients/Index.cshtml
+++ b/HospSimWebsite/Views/Patients/Index.cshtml
@@ -45,7 +45,7 @@
         @foreach (var patient in Model.Patients)
         {
             <tr>
-                <th scope="row">@patient.Id</th>
+                <th scope="row">@Model.Patients.IndexOf(patient)</th>
                 <td class="patientName">@patient.Name</td>
                 <td>@patient.Age</td>
                 <td>
