--- a/HospSimWebsite/Views/Disease/Index.cshtml
+++ b/HospSimWebsite/Views/Disease/Index.cshtml
@@ -26,11 +26,10 @@
         </tr>
         </thead>
         <body>
-
         @foreach (var patient in Model.Patients)
         {
             <tr>
-                <th scope="row">@patient.Id</th>
+                <th scope="row">@Model.Patients.IndexOf(patient)</th>
                 <td>@patient.Name</td>
             </tr>
         }
