--- a/HospSimWebsite/Views/Form/Index.cshtml
+++ b/HospSimWebsite/Views/Form/Index.cshtml
@@ -30,11 +30,17 @@
         <div class="form-group">
             <label>Name</label>
             <input id="inputName" asp-for="Name" type="text" class="form-control" maxlength="28" placeholder="Jack Something">
+            <div class="requiredMsg">
+                @Html.ValidationMessageFor(model => model.Name)
+            </div>
         </div>
 
         <label>Date of Birth</label>
         <div class="form-group">
             <input asp-for="Birthday" type="date" max="@DateTime.Now" value="@DateTime.Now" class="form-control"/>
+            <div class="requiredMsg">
+                @Html.ValidationMessageFor(model => model.Birthday)
+            </div>
         </div>
 
         <div class="form-group">
@@ -42,6 +48,9 @@
             <select asp-for="Disease" asp-items="@Model.Diseases" class="form-control" id="inputDisease">
                 <option>Please select one</option>
             </select>
+            <div class="requiredMsg">
+                @Html.ValidationMessageFor(model => model.Disease)
+            </div>
         </div>
 
         <div>
